Make Collectable spawning extendable and finish Mage enemy
Also add Debug difficulty that is selected when loading the Game scene
directly.